[package]
name = "tg_atmos_sim"
version = "1.0.0"
authors = ["Delta <editorrus2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "0.6.4"
float-cmp = "0.8.0"
libc = "0.2"

[lib]
crate-type=["cdylib"]
